「非推奨のURL(String)をURIい変更した」